--- a/lisp-exploration.html
+++ b/lisp-exploration.html
@@ -7,8 +7,14 @@
   <body>
 
 
+    <div style="float: right">
+      <a href="https://github.com/BnMcGn/lisp-guide">Source repository</a>
+    </div>
 
-    <h1>Common Lisp REPL Exploration Guide</h1>
+    <h1><a href="http://bnmcgn.github.io/lisp-guide/lisp-exploration.html">
+        Common Lisp REPL Exploration Guide</a>
+    </h1>
+
 
     <p>Emacs/Slime edition</p>
 
@@ -60,6 +66,8 @@
 <h2>Surroundings</h2>
 
 <h3>List of available functions</h3>
+
+<p>[???]</p>
 
 <h3>Last three items in result history (most recent first)</h3>
 
@@ -262,7 +270,7 @@ M-n
 
 <h2>Crashes and errors</h2>
 
-<h3>Stop a runaway process</h3>
+<h3>Stop a running task</h3>
 
 <pre><code>C-c C-c
 </code></pre>
@@ -272,10 +280,8 @@ M-n
 <pre><code>q</code> - or select <code>[Abort]</code>
 </code></pre>
 
+<br/>
 
-<h2>More References</h2>
-
-<p>M-x slime-cheat-sheet</p>
-
+<footer>Copyright 2016 Ben McGunigle</footer>
   </body>
   </html>
